--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <title>Assignment</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./assets/shuvro.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="inter-font">
-    <h1>hello</h1>
+    <header>
+        <nav class="navbar">
+            <h1 class="white">Tech<span>Wave</span></h1>
+            <div class="nav-text">
+                <ul class="flex">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Episodes</a></li>
+                    <li><a href="">Host</a></li>
+                </ul>
+            </div>
+            <div class="common-button flex">Subscribe <i class="fa-solid fa-arrow-right"></i></div>
+        </nav>
+    </header>
 </body>
 </html>
