--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="navbar">
         <h1 class="white">Tech<span>Wave</span></h1>
         <div class="nav-text none">
-          <ul class="flex">
+          <ul class="flex color">
             <li><a href="">About</a></li>
             <li><a href="">Episodes</a></li>
             <li><a href="">Host</a></li>
@@ -37,7 +37,7 @@
         <div class="banner-container">
           <div class="banner-pictures">
             <img
-              class=" banner-png1"
+              class="banner-png1"
               src="./assets/hero-circle.png"
               alt="colorful circle picture"
             />
@@ -48,19 +48,63 @@
             />
             <p class="new">New</p>
           </div>
-          <div class="white">
-            <h1>TechWave</h1>
-            <p>
+          <div >
+            <h1 class="white">TechWave</h1>
+            <p class="color product-gap">
               Your daily dose of tech insights, productivity hacks, and personal
               growth
             </p>
           </div>
-          <div class="banner-button-container">
-            <button class="common-button flex"><img src="./assets/spotify.png" alt="spotify's image"> Listen on Spotify</button>
-            <button class="flex banner-button"><img src="./assets/message.png" alt="picture of a message"> Subscribe</button>
+          <div class="banner-button-container product-gap">
+            <button class="common-button flex">
+              <img src="./assets/spotify.png" alt="spotify's image" /> Listen on
+              Spotify
+            </button>
+            <button class="flex banner-button">
+              <img src="./assets/message.png" alt="picture of a message" />
+              Subscribe
+            </button>
           </div>
         </div>
       </section>
     </header>
+    <main>
+      <!-- product-section -->
+      <section class="products">
+        <div class="max-width center product-text">
+          <h1 class="white">About The Podcast</h1>
+          <p class="color product-gap">
+            TechWave is your go-to podcast for staying ahead in the fast-paced
+            world of technology. We break down complex topics into digestible
+            insights, explore productivity strategies that actually work, and
+            share stories of personal growth from industry leaders.
+          </p>
+          <p class="color product-gap">
+            Join thousands of young professionals and tech enthusiasts who start
+            their day with TechWave.
+          </p>
+        </div>
+        <div class="ratting-section max-width">
+          <div class="center">
+            <p class="ratting">150K<i class="fa-solid fa-plus"></i></p>
+            <p class="white">Monthly Listeners</p>
+          </div>
+          <div class="center">
+            <p class="ratting">200<i class="fa-solid fa-plus"></i>
+            </p>
+            <p class="white">Episodes Published</p>
+          </div>
+          <div class="center">
+            <p class="ratting">4.9<i class="fa-solid fa-star"></i>
+            </p>
+            <p class="white">Average Rating</p>
+          </div>
+          <div class="center">
+            <p class="ratting">50<i class="fa-solid fa-plus"></i></p>
+            <p class="white ">Industry Experts</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
