host section done

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <iframe width="380" height="215" src="https://www.youtube.com/embed/sSOxPJD-VNo?si=5O8yNYj5TfB-3n3x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                <div class="featured-padding">
                  <h2 class="white">The Future of AI in Everyday Life</h2>
-                <p class="color">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                <p class="color">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade</p>
                 <div class="flex-item">
                   <img src="./assets/clock.png" alt="picture of a green clock">
                   <p class="green">42 min</p>
@@ -166,11 +166,13 @@
               
               <div class="iframe-box">
                 <iframe width="380" height="215" src="https://www.youtube.com/embed/AVEZBy1uAk8?si=7uocmpN4zy7Z7H57" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                 <h2 class="white">The Future of AI in Everyday Life</h2>
-                <p class="color">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                <div class="featured-padding">
+                   <h2 class="white">Building Better Habits for Remote Work</h2>
+                <p class="color">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
                 <div class="flex-item">
                   <img src="./assets/clock.png" alt="picture of a green clock">
                   <p class="green">35 min</p>
+                </div>
                 </div>
               </div>
                </div>
@@ -179,8 +181,8 @@
               <div class="iframe-box">
                 <iframe width="380" height="215" src="https://www.youtube.com/embed/bdhaUe6dhvM?si=P-xfVIKYeXQHFbZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                <div class="featured-padding">
-                 <h2 class="white">The Future of AI in Everyday Life</h2>
-                <p class="color">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                 <h2 class="white">Career Growth in Tech:A Roadmap</h2>
+                <p class="color">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
                 <div class="flex-item">
                   <img src="./assets/clock.png" alt="picture of a green clock">
                   <p class="green">51 min</p>
@@ -194,6 +196,28 @@
            </div>
           </div>
         </section>
+
+        <!-- host section -->
+         <section class="host-section">
+           <h1 class="white">Meet The Host</h1>
+          <div class="max-width color-sections">
+          <div class="host-container flex">
+            <div class="host-image">
+              <img src="./assets/host.png" alt="picture of our host">
+            </div>
+            <div class="host-text">
+              <h2 class="white">Alex Kumar</h2>
+              <p class="color">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years working with startups and fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech</p>
+              <div class="social-media">
+              <button><img src="./assets/linkedin.png" alt="linkedin image"></button>
+              <button><img src="./assets/twitter.png" alt="twitter image"></button>
+              <button><img src="./assets/instagram.png" alt="instagram image"></button>
+              <button><img src="./assets/youtube.png" alt="youtube image"></button>
+            </div>
+            </div>
+          </div>
+          </div>
+         </section>
     </main>
   </body>
 </html>
