fotter section done

--- a/index.html
+++ b/index.html
@@ -219,5 +219,31 @@
           </div>
          </section>
     </main>
+    <footer>
+      <div class="max-width">
+       <div class="footer-margin">
+         <p class="footer-big-text white">Tech<span class="footer-color">Wave</span></p>
+         <div class="podcast">
+          <div class="podcast-site">
+            <img src="./assets/spotify.png" alt="spotify image">
+            <p class="colors">Spotify</p>
+          </div>
+          <div class="podcast-site">
+            <img src="./assets/apple-podcast.png" alt="apple podcast">
+            <p class="colors">Apple Podcast</p>
+          </div>
+          <div class="podcast-site">
+            <img src="./assets/youtube-podcast.png" alt="">
+            <p class="colors">YouTube</p>
+          </div>
+          <div class="podcast-site">
+            <img src="./assets/twitter.png" alt="">
+            <p class="colors">Twitter</p>
+          </div>
+        </div>
+        <p class="color">© 2026 TechWave Podcast. All rights reserved.</p>
+       </div>
+      </div>
+    </footer>
   </body>
 </html>
